# logit-be

./: .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.infra.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  logging.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-issue-request.md  feature_request.md  issue-feature-request.md
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml
alembic/: env.py
alembic/versions/: 41cefd1e6e04_initial_migration.py  9c8055773f47_initial.py  a0b9d87a72b3_init.py  a1b2c3d4e5f6_add_is_completed_to_questions.py  a2b3c4d5e6f7_add_is_auto_renew_to_subscriptions.py  aa5bf0f84d5a_initial_migration.py  abb3120492e9_initial_migration_with_uuid_and_oauth_.py  ae7464c49fe3_initial_migration.py  b3c4d5e6f7a8_remove_free_trial_from_subscription_plan.py  c1d2e3f4a5b6_add_mcp_subscription_table.py  d1e2f3a4b5c6_rename_mcp_subscriptions_to_subscriptions.py  d531d9217bb2_initial_migration.py  d5b072b730c6_add_company_chat_and_chat_message_tables.py  e2f3a4b5c6d7_add_mcp_token_to_subscriptions.py  e536a2e421dc_initial_migration.py  f1a2b3c4d5e6_add_payment_records_table.py  g2h3i4j5k6l7_add_card_info_to_payment_records.py  h3i4j5k6l7m8_add_phone_to_users.py  i4j5k6l7m8n9_add_plans_table.py  j5k6l7m8n9o0_add_banners_table.py  k6l7m8n9o0p1_add_subscription_events.py  l7m8n9o0p1q2_add_show_on_mobile_to_plans.py  m8n9o0p1q2r3_add_ai_usage_logs.py  n9o0p1q2r3s4_add_token_system.py  o0p1q2r3s4t5_token_user_id_to_uuid.py  p1q2r3s4t5u6_add_referral_notification_fields.py  q2r3s4t5u6v7_add_monthly_tokens_to_plans.py  r3s4t5u6v7w8_add_unnotified_signup_bonus.py
notebooks/: chat_pipeline_test.ipynb
scripts/: create_dev_user.py  deploy.sh
src/: __init__.py  config.py  database.py  exceptions.py  main.py  security.py
src/ai_usage/: callbacks.py  models.py  service.py
src/auth/: __init__.py  constants.py  exceptions.py  router.py  schemas.py  service.py  utils.py
src/banners/: __init__.py  models.py  router.py  schemas.py
src/chat_messages/: __init__.py  models.py  router.py  schemas.py  service.py
src/chats/: __init__.py  chat_history.py  dependencies.py  llm_service.py  models.py  prompts.py  rate_limit.py  router.py  schemas.py  service.py  swagger.py
src/common/: crypto.py  discord.py  responses.py  slack.py
src/companies/: __init__.py  models.py  schemas.py
src/experience/: __init__.py  (+5 more)
tests/: conftest.py  test_auth.py  test_experience.py  test_report.py  test_tokens.py  test_users.py
(+43 files in other folders)
