[project]
name = "logit-server"
version = "0.1.0"
description = "Logit Backend API with FastAPI"
requires-python = ">=3.10,<4.0"
dependencies = [
    # FastAPI Core
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    "email-validator>=2.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Database - PostgreSQL (async with asyncpg - 5x faster)
    "sqlmodel>=0.0.21",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Database - Redis
    "redis>=5.2.0",
    "hiredis>=3.0.0",

    # Vector Database - Qdrant (production-grade, cost-efficient)
    "qdrant-client>=1.12.0",

    # Langchain
    "langchain>=0.3.13",
    "langchain-community>=0.3.13",
    "langchain-openai>=0.2.14",
    "langchain-anthropic>=0.3.0",
    "langchain-qdrant>=0.2.0",

    # Security (JWT for OAuth authentication)
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",

    # Monitoring
    "sentry-sdk[fastapi]>=2.0.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "tenacity>=8.2.0",
    "jinja2>=3.1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]
# Set src as the mypy path
mypy_path = "src"

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
sort = "-Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
